--- a/config.json
+++ b/config.json
@@ -32,7 +32,7 @@
     "retries": 5,
     "retry-pause": 5,
     "safe": false,
-    "threads": null,
+    "threads": 4,
     "user-agent": null,
     "watch": false
 }
